# build-system-demo

./: .bazelrc  .clang-tidy  .gitignore  BUILD  Bazel.md  Bazelisk.md  Bazelisk_EN.md  CI.md  CMakeLists.txt  CMakePresets.json  CMakePresets.md  LICENSE  README.md  README_EN.md  WORKSPACE  bazel-bin  bazel-class_test  bazel-out  bazel-testlogs
.cache/clangd/index/: BaseClass.cpp.248195D6578869EC.idx  BaseClass.h.6C2B3A1C36BCB99D.idx  SubClass.cpp.EAB7BA3B92C72C32.idx  SubClass.h.7E077C9C1CE4C6A2.idx  main.cpp.AB40F0E89B19B8FC.idx
.github/workflows/: bazel.yml  bazelisk.yml  clang-tidy.yml  cmake-presets.yml  coverity.yml
doc/: BUILD.md  Bazel.md  Bazel_EN.md  Bazelisk.md  Bazelisk_EN.md  CI.md  CI_EN.md  CMakePresets.md  CMakePresets_EN.md  CmakeBuild.md
include/: BaseClass.h  SubClass.h
src/: BaseClass.cpp  SubClass.cpp  main.cpp
tests/: sub_class_test.cpp
